--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkatra&family=Bebas+Neue&family=Dancing+Script:wght@700&family=Edu+TAS+Beginner:wght@500&family=Lobster&family=Nunito&family=Pacifico&family=Playfair+Display:ital,wght@1,900&family=Roboto+Slab:wght@300&family=Rubik:ital,wght@0,700;1,400;1,500&display=swap" rel="stylesheet">
+    <style>
+      * {
+        font-family: "Alkatra", cursive;
+        margin: 0;
+      }
+    </style>
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
